--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -18,9 +18,10 @@ layout: default
   <link rel="stylesheet" href="{{ '/assets/css/syntax.css' | relative_url }}">
   
   <!-- Search functionality -->
+  <script>window.__DOCS_BASEURL = {{ site.baseurl | default: '' | jsonify }};</script>
   <script src="{{ '/assets/js/search.js' | relative_url }}" defer></script>
 </head>
-<body>
+<body data-baseurl="{{ site.baseurl | default: '' }}">
   <div class="wrapper">
     <header>
       <h1><a href="{{ '/' | relative_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
